# Takelma-Corpus-Project

./: Data_Processor.py  LICENSE.txt  README.md  __main__.py  auto_glosser.py  language_model.py  main.py  pyproject.toml  requirements.txt  util_datastructs.py
tcp_utils/: Data_Processor.py  auto_glosser.py  language_model.py  vector_semantics.py
