[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version","dependencies"]
name = "Takelma-Corpus-Project"
authors = [
    {name = 'Justin Mackie',email = "jmackie4@asu.edu"}
]
description = "TCP package that's usable for language documentation and analysis"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
